# ZWxBot

./: .gitignore  CMakeLists.txt
include/: SunriseSunset_io.hpp  TrendTracker.h  bmp180.hpp  bot_utils.hpp  charts.hpp  correctHumidity.hpp  log.hpp  main.hpp  moonPhases.hpp  secret.h  sql.hpp  ssd1306.hpp  version.hpp
src/: SunriseSunset_io.cpp  bmp180.cpp  bot_utils.cpp  charts.cpp  correctHumidity.cpp  log.cpp  main.cpp  moonPhases.cpp  sql.cpp  ssd1306.cpp  version.cpp
tools/: clean_zwx_logs.pl  prepareData.pl
www/: index.html
www/assets/bootstrap/css/: bootstrap.min.css
www/assets/css/: zwx.css
www/assets/fonts/nunito/: nunito.css
www/assets/js/: tools.js
